--- a/minicrt/minicrt_2008.vcproj
+++ b/minicrt/minicrt_2008.vcproj
@@ -167,6 +167,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\argcargvW.cc"
+				>
+			</File>
+			<File
 				RelativePath=".\atoi.cc"
 				>
 			</File>
@@ -180,6 +184,10 @@
 			</File>
 			<File
 				RelativePath=".\crt0tcon.cc"
+				>
+			</File>
+			<File
+				RelativePath=".\crt0tconW.cc"
 				>
 			</File>
 			<File
@@ -290,6 +298,10 @@
 			>
 			<File
 				RelativePath=".\argcargv.h"
+				>
+			</File>
+			<File
+				RelativePath=".\argcargvW.h"
 				>
 			</File>
 			<File
